--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.15",
+    "milligram": "^1.3.0",
     "rxjs": "^5.5.6",
     "save": "^2.3.2",
     "zone.js": "^0.8.19"
